css/custom.css
.text-align-left {
    text-align: left !important;
}

.text-align-right {
    text-align: right !important;
}

.text-align-center {
    text-align: center !important;
}

.dropdown-dark {
    background-color: #1b1b1b;
}

.dropdown-dark  li > a {
    color: #999999;
}

body {
    padding-top: 60px;
    padding-bottom: 30px;
}

.sidebar-nav {
    padding: 9px 0;
}

.table-condensed .progress {
    margin-bottom: 0px !important;
}

.form-horizontal-super-condensed .control-group {
    margin-bottom: 0px !important;
}

.form-horizontal-condensed .control-group {
    margin-bottom: 5px !important;
}

.table-condensed input[type="radio"],
.table-condensed input[type="checkbox"],
.form-horizontal input[type="radio"],
.form-horizontal input[type="checkbox"]
{
    vertical-align: top !important;
}


.form-horizontal-super-condensed input[type="radio"],
.form-horizontal-super-condensed input[type="checkbox"]
{
    vertical-align: bottom !important;
}

.form-horizontal-wide .control-label {
    width: 210px;
}

.form-horizontal-wide .controls {
    margin-left: 230px;
}

.row-fluid .span4 {
    width: 31.914893617021278%;
    *width: 31.861702127659576%;
}

.row-fluid .span3 {
    width: 23.404255319148934%;
    *width: 23.351063829787233%;
}

